配置工具修改

--- a/config/path.cfg
+++ b/config/path.cfg
@@ -1,3 +1,3 @@
 [project_path]
-cs_path = E:\GitProjects\GF_3_0_9_Demo\GF_3_0_9_Demo\Assets\GameMain\Scripts\DataTable
-json_path = E:\GitProjects\GF_3_0_9_Demo\GF_3_0_9_Demo\Assets\GameMain\Res\DataTables
+cs_path = E:\GitProjects\GF_Demo\GF_3_1_3_Demo\Assets\GameMain\Scripts\DataTable
+json_path = E:\GitProjects\GF_Demo\GF_3_1_3_Demo\Assets\GameMain\Res\DataTables
